# nginx-config-formatter

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  nginxfmt.py  pyproject.toml  setup.cfg  setup.py  test_nginxfmt.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
go2NginxFormatter/: main.go
go2NginxFormatter/testFiles/: 2.txt  umlaut-latin1.conf
nginxfmt/: __init__.py
p2g/: main.go
test-files/: not-formatted-1.conf  umlaut-utf8.conf
test1/: gb18030.txt.conf  test1.go
tests/: __init__.py  test_nginxfmt.py
